--- a/projects/covid-data-visualization-project/covid-data-visualization-project.html
+++ b/projects/covid-data-visualization-project/covid-data-visualization-project.html
@@ -46,15 +46,15 @@
 	<div class="container">
 		<div class="row">
 		<div class="col-lg-8">
-			<h2 class="portfolio-title">Port scanner in python</h2>
+			<h2 class="portfolio-title">Covid Data Visualization project</h2>
 			<div class="owl-carousel portfolio-details-carousel">
-				<img src="..//projects/projects/port-scanner-in-python.jpg" class="img-fluid" alt="">
+				
 			</div>
 		</div>
 		<div class="col-lg-4 portfolio-info">
-			<h3>Port scanner in python</h3>
+			<h3>Covid Data Visualization project</h3>
 			<ul>
-			<li><strong>Category</strong>: networking</li>
+			<li><strong>Category</strong>: web dev</li>
 			<li><strong>Github URL</strong>: <a href=""></a></li>
 			</ul>
 
